# N-body-sim

./: CMakeLists.txt  README.md  figure8.json  rand.json  rand1.json  stable1.json
imgui/: implot3d.cpp  implot3d.h  implot3d_internal.h  implot3d_items.cpp
src/: main.cpp  point_particle.h  sim_queue.cpp  sim_queue.h  simulation.cpp  simulation.h
